crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__rendering_bugs__bug_duplicated_user_message.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.full_state()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > hi!                                                                          
                                                                                
 ● Hello! I'm Claude.                                                           
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
