crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__rendering_bugs__bug_interleaved_tool_output.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.full_state()
---
                                                                                
 > hi!                                                                          
                                                                                
 ● Hello! I can help you with:                                                  
   - Understanding the project                                                  
   ● read_file(path="README.md") → # Crucible...                                
   - Assisting with development                                                 
   - Explaining systems                                                         
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
