crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__rendering_bugs__bug_tool_indicator_mid_stream.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.full_state()
---
                                                                                
 > hi!                                                                          
                                                                                
 ● Hello! I'm Claude.                                                           
                                                                                
   I can help you with:                                                         
   ● read_file(path="README.md") → # Crucible README                            
   - Project architecture                                                       
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
